# aioredis_fastapi

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
aioredis_fastapi/: __init__.py  config.py  methods.py  session.py
tests/: __init__.py  test_aioredis_fastapi.py  test_frozndict.py  tests_aioredis_fastapi.py
