[tool.poetry]
name = "aioredis_fastapi"
version = "1.0.0"
description = "aioredis_fastapi is an asynchronous redis based session backend for FastAPI powered applications."
authors = [
    "Mahmoud Harmouch <business@wiseai.dev>"
]
license = "GNU General Public License v3.0"
readme = "README.rst"
repository = "https://github.com/wiseaidev/aioredis_fastapi"
homepage = ""
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["python", "aioredis_fastapi", "redis"]
packages = [
    { include = "aioredis_fastapi", from = "." },
]
include = [
    "LICENSE",
    "README.rst",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
