[tool.poetry]
name = "aioredis_fastapi"
version = "1.0.0"
description = "aioredis_fastapi is an asynchronous redis based session backend for FastAPI powered applications."
authors = [
    "Mahmoud Harmouch <oss@wiseai.dev>"
]
license = "GNU General Public License v3.0"
readme = "README.rst"
repository = "https://github.com/wiseaidev/aioredis_fastapi"
homepage = ""
documentation = ""
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["python", "aioredis", "redis", "fastapi"]
packages = [
    { include = "aioredis_fastapi", from = "." },
]
include = [
    "LICENSE",
    "README.rst",
]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.105.0"
attrs = "^23.1.0"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
coverage = "^7.3.4"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
tox = "^4.11.4"
isort = "^5.13.2"
black = "^23.12.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
